<resources>
    <string name="app_name">OnlineShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_cart">Cart</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
</resources>