<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/baseline_manage_search_black_24"
        android:title="@string/title_catalog" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favourites"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"/>

</menu>