<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="uz.coderboy.onlineshop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="uz.coderboy.onlineshop.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="uz.coderboy.onlineshop.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_favourites"
        android:name="uz.coderboy.onlineshop.ui.favourites.FavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="uz.coderboy.onlineshop.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>